[package]
name = "circle2d"
version = "0.1.0"
authors = ["koalefant <mandarin.cake@gmail.com>"]
edition = "2018"

[features]
serde_support = ["serde_derive", "serde"]
# hashing is disabled by default as it is not implemented for floating point types
hash_support = []
fixed_point = []

default = []

[dependencies]
glam = "0.9.5"
slotmap = "0.4.0"
rustc-hash = "1.1.0"
serde_derive = { version = "1.0.116", optional = true }
serde = { version = "1.0.116", optional = true }

[dev-dependencies]
miniquad = "0.3.0-alpha.19"
